# white-generator

./: .gitignore  CHANGE_LOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  change_log.md  pyproject.toml  readme.md  setup.py  white_generator.py
resources/: notes.txt
resources/background/: LICENSE.txt  license.txt
resources/font/: LICENSE.txt
stubs/PIL/: ImageFont.pyi
white_generator/: __init__.py  cli.py  consts.py  db.py  generation.py  io.py  io_test.py  logger.py  main.py  text.py  text_test.py  types.py  types_test.py
