[build-system]
requires = ["setuptools >= 65.1.0, < 66.0.0", "wheel >= 0.37.1, < 0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "white-generator"
description = "Utility for a generation of memes"
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "thewizardplusplus", email = "thewizardplusplus@yandex.ru" },
]
requires-python = ">= 3.10.12, < 4.0.0"
dependencies = ["termcolor >= 2.4.0, < 3.0.0", "pillow >= 10.3.0, < 11.0.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/thewizardplusplus/white-generator"

[project.scripts]
white-generator = "white_generator.main:main"

[tool.setuptools]
packages = ["white_generator"]

[tool.setuptools.dynamic]
version = { attr = "white_generator.__version__" }

[tool.mypy]
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_incomplete_stub = true

strict_concatenate = true
strict_equality = true

show_column_numbers = true
show_error_codes = true
